--- a/Client/index.html
+++ b/Client/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buddy Matching System</title>
+    <title>Smart Konbini</title>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet">
   </head>
   <body>
